--- a/requirements_oci.txt
+++ b/requirements_oci.txt
@@ -13,4 +13,7 @@ mimetypes==1.0
 # Additional dependencies
 requests==2.31.0
 urllib3==2.0.7
+pymupdf==1.27.1
+python-dotenv==1.0.1
+reportlab==4.4.9
 
